--- a/src/app/teacher/tab-notifications/tab-notifications.component.html
+++ b/src/app/teacher/tab-notifications/tab-notifications.component.html
@@ -8,4 +8,75 @@
 </ion-header>
 
 <ion-content>
+   <ion-accordion-group expand="inset">
+
+    <!--
+      <ion-accordion value="1A" toggleIconSlot="start">
+        <ion-item slot="header" color="light">
+          <ion-label>Grupo 1° "A"</ion-label>
+          <ion-button shape="round" (click)="onAddStudent($event)">
+            <ion-icon slot="icon-only" name="person-add"></ion-icon>
+          </ion-button>
+        </ion-item>
+        <div class="ion-padding" slot="content">
+          No hay alumnos en este grupo.
+        </div>
+      </ion-accordion>
+    -->
+
+    <ion-accordion value="1A" toggleIconSlot="start">
+      <ion-item slot="header" color="light">
+        <ion-label>Grupo 1° "A"</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        No hay alumnos en este grupo.
+      </div>
+    </ion-accordion>
+
+    <ion-accordion value="1B" toggleIconSlot="start">
+      <ion-item slot="header" color="light">
+        <ion-label>Grupo 1° "B"</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        No hay alumnos en este grupo.
+      </div>
+    </ion-accordion>
+
+    <ion-accordion value="2A" toggleIconSlot="start">
+      <ion-item slot="header" color="light">
+        <ion-label>Grupo 2° "A"</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        No hay alumnos en este grupo.
+      </div>
+    </ion-accordion>
+
+    <ion-accordion value="2B" toggleIconSlot="start">
+      <ion-item slot="header" color="light">
+        <ion-label>Grupo 2° "B"</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        No hay alumnos en este grupo.
+      </div>
+    </ion-accordion>
+
+    <ion-accordion value="3A" toggleIconSlot="start">
+      <ion-item slot="header" color="light">
+        <ion-label>Grupo 3° "A"</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        No hay alumnos en este grupo.
+      </div>
+    </ion-accordion>
+
+    <ion-accordion value="3B" toggleIconSlot="start">
+      <ion-item slot="header" color="light">
+        <ion-label>Grupo 3° "B"</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        No hay alumnos en este grupo.
+      </div>
+    </ion-accordion>
+
+  </ion-accordion-group>
 </ion-content>
